Challenge completed. Also converted price to show 2 decimal places.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,17 @@
     tools:context="com.londonappbrewery.bitcointicker.MainActivity">
 
     <TextView
+        android:id="@+id/priceLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/label_default_text"
-        android:id="@+id/priceLabel"
-        android:textSize="45sp"
-        android:textStyle="bold"
-        android:textColor="@color/fontColour"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+        android:inputType="numberDecimal"
+        android:numeric="decimal"
+        android:text="@string/label_default_text"
+        android:textColor="@color/fontColour"
+        android:textSize="45sp"
+        android:textStyle="bold"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -28,7 +30,8 @@
         android:id="@+id/logoImage"
         android:contentDescription="@string/imageview_desc"
         android:src="@drawable/bitcoin_image"
-        android:layout_alignParentTop="true"
+        android:layout_marginBottom="24dp"
+        android:layout_above="@+id/priceLabel"
         android:layout_centerHorizontal="true"/>
 
     <LinearLayout
@@ -39,25 +42,24 @@
         android:gravity="center_vertical|center_horizontal">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/base"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:id="@+id/textView"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:text="@string/base"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="28sp"
+            android:textStyle="bold"/>
 
         <Spinner
+            android:id="@+id/currency_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/currency_spinner"
-            android:gravity="center_horizontal"
-            android:spinnerMode="dropdown"
             android:dropDownSelector="@color/fontColour"
-            />
+            android:gravity="center_horizontal"
+            android:spinnerMode="dropdown"/>
 
 
     </LinearLayout>
